--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@prisma/client": "^6.4.1",
     "next": "16.1.1",
+    "prisma": "^6.4.1",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   }
